new daat version, more rail and GM test tidy up